// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table when the table size is compact renders a table to match the expected style 1`] = `
.c0 {
  border-collapse: separate;
  border-radius: 0px;
  border-spacing: 0;
  min-width: 100%;
  table-layout: fixed;
  width: auto;
  word-break: break-all;
  background-color: #FFFFFF;
}

.c0 .c2 {
  height: 24px;
}

.c0 .c2 .c1,
.c0 .c2 .sc-kAzzGY {
  font-size: 13px;
  padding-left: 8px;
  padding-right: 8px;
}

.c0 .c2:nth-child(2n) .c1 {
  background-color: #FAFBFB;
}

.c0 .c2:hover .c1 {
  background-color: #F2F5F6;
}

.c0 .c2:hover .c1 {
  background-color: #F2F5F6;
}

.c0 caption {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  width: 1px;
  position: absolute;
  top: -99999px;
}

.c0 .c2:last-child .c1 {
  border-bottom-color: transparent;
}

<table
  className="c0"
  size="compact"
/>
`;

exports[`Table when the table size is small renders a table to match the expected style 1`] = `
.c0 {
  border-collapse: separate;
  border-radius: 0px;
  border-spacing: 0;
  min-width: 100%;
  table-layout: fixed;
  width: auto;
  word-break: break-all;
  background-color: #FFFFFF;
}

.c0 .c2 {
  height: 32px;
}

.c0 .c2 .c1,
.c0 .c2 .sc-kAzzGY {
  font-size: 14px;
  padding-left: 8px;
  padding-right: 8px;
}

.c0 .c2:nth-child(2n) .c1 {
  background-color: #FAFBFB;
}

.c0 .c2:hover .c1 {
  background-color: #F2F5F6;
}

.c0 .c2:hover .c1 {
  background-color: #F2F5F6;
}

.c0 caption {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  width: 1px;
  position: absolute;
  top: -99999px;
}

.c0 .c2:last-child .c1 {
  border-bottom-color: transparent;
}

<table
  className="c0"
  size="small"
/>
`;
